--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <li><a target="_blank" href="https://drive.google.com/file/d/1soH7CPqG2OvxdIHbiTtyiJHD9u0F_Zej/view?usp=sharing">ch03 原子結構</a></li>
                         </ul>
                 </div>
-                <div class="edu-block">
+                <div class="edu-block" style="display:none;">
                     <h2>學測複習講義一</h2>
                         <ul>
                             <li><a target="_blank" href="https://drive.google.com/file/d/1SJJK577a-djGnxLqz5TOgZcRpRVq2oMQ/view?usp=sharing">英文複習講義</a></li>
@@ -133,7 +133,7 @@
                             <li><a target="_blank" href="https://drive.google.com/file/d/1Ql2gCOdReHTXmIBrkz88lb0T0eM28j9C/view?usp=sharing">生物複習講義</a></li>
                         </ul>
                 </div>
-                <div class="edu-block">
+                <div class="edu-block" style="display:none;">
                     <h2>學測複習講義二</h2>
                     <ul>
                         <li><a target="_blank" href="https://drive.google.com/file/d/1IqjJcmLGrnfp0QwaKk-mjOVo4EJJX77R/view?usp=sharing">數A複習講義</a></li>
@@ -148,7 +148,7 @@
                         <li><a target="_blank" href="https://drive.google.com/file/d/1VAqVvoUdCxL8TSML-9C-06UTGY7adn1X/view?usp=sharing">公民複習講義</a></li>
                     </ul>
                 </div>
-                <div class="edu-block">
+                <div class="edu-block" style="display:none;">
                     <h2>超素養閱讀</h2>
                         <ul>
                             <li><a target="_blank" href="https://drive.google.com/file/d/1UALY_6zte2sAJtRNy-PqhPAdVWu9lh-k/view?usp=sharing">物理閱讀與探究</a></li>
@@ -172,7 +172,37 @@
         </div>
 
         <div class="ocp-open">
+            <h2>OCP Java SE 11 Developer</h2>
             <img src="images/cert.png" alt="">
+            <div class="ocp-open-text-all">
+                <h2>OCPJP SE 11 備考心得</h2>
+                <div class="ocp-open-text">
+                    <div class="ocp-text-block">
+                        <h2>自我介紹</h2>
+                        <h4>我是今年升大二的學生，選擇在大一下的暑假修習了OCPJP的課程，從中獲得了許多寶貴的經驗與技能。 </h4>
+                    </div>
+                    <div class="ocp-text-block">
+                        <h2>學習基本</h2>
+                        <h4>第一次修OCPJP課程是在2022.07.18~2022.08.22這個梯次，老師的課程教學偏向於考試重點章節的講述以及其章節的細節強調（也就是上課所會取得的那幾份章節講義)，上面所列出的API一定都要知道並且實際的去打過一次。我時常會在上課前的一小時就到班上準備，有問題時，絕對不要覺得害羞，主動去問老師，老師都會很願意的回答你的問題。 </h4>
+                    </div>
+                    <div class="ocp-text-block">
+                        <h2>自我練習</h2>
+                        <h4>這梯次的課程是密集班（每天的13:30~16:30），而我會在17:30前回到學校，吃完晚餐後就直接進到自習室裡一路練習到 01:00，除了複習上課所學外，我也會自己去 YT 與 Java API文件，自我加深加廣，不斷的磨練自己所學以及個人coding的能力，在這一個月裡的不間斷練習，使我從無知變成知道如何查看api文件以及善用其技巧。 </h4>
+                    </div>
+                    <div class="ocp-text-block">
+                        <h2>課程評價</h2>
+                        <h4>老師的課程使我從會用但不懂其原理，變成會用且理解其技術背後的意義，並且促使我再一次擁有學習好程式語言的動力，就因為遇到了江老師，我才能靜下心來好好的拚了這一個月，在8/22時結束了這門課後，我就選擇在 9/3 這個時間點去考試，也獲得了理想的成積，謝謝老師。</h4>
+                    </div>
+                    <div class="ocp-text-block">
+                        <h2>學習資源</h2>
+                        <div class="ex">
+                            <span class="ex-text">額外學習資源：</span><a target="_blank" href="https://www.youtube.com/channel/UCD-AOkdBULZiUYki-oRAu6A">學習學習再學習</a><br>
+                            <span class="ex-text">個人學習經歷：</span><a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07">OCPJP SE 11</a><br>
+                            <span class="ex-text">個人學習計畫表：</span><a target="_blank" href="plan.html">OCPJP Plan</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <button class="close-button">close</button>
         </div>
 
