--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                 </div>
              </div>
              <h1>影音教學區</h1>
+
+             <span class="declare">純屬個人教學演練使用，非公開/商用性資源。</span>
              <div class="teach-video">
 
              </div>
