--- a/academic.html
+++ b/academic.html
@@ -137,7 +137,7 @@
                     <th>生理心理學</th>
                     <th>電子學</th>
                     <th>亞裔文學</th>
-                    <th>教學媒體</th>
+                    <th>OCPJP</th>
                     <th>ORACLE</th>
                     <th>前端工程師</th>
                     <th>學分數</th>
@@ -154,7 +154,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
+                    <th>外修</th>
                     <th>外修</th>
                     <th>企業實習</th>
                     <td>24<span class="ext"> +12</span></td>
