--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
     <div class="skills">
         <div class="mark1"></div>
         <div class="mark2"></div>
+        <button class="skills-text-mark" id="skill-open">查看詳情</button>
+        <div class="skills-text-mark-block">
+            <div class="skills-text-mark-block-img">
+                <img src="images/PR.png" alt="">
+                <button class="skills-btn-1" id="skill-close">close</button>
+            </div>
+        </div>
         <h1 class="animate__animated">Skills For My Engineer Career</h1>
         <ul>
             <li>
