--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div class="project">
         <h1 class="animate__animated">Recent Project</h1>
         <p>See more about these on my <a href="https://github.com/SC1314520">GitHub</a></p>
-        <div class="content animate__animated">
+        <div class="content show9 animate__animated" id="9" >
             <div class="href">
                 <img src="images/cert.png" alt="">
                 <a target="_blank" href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9230CD0C820DD47EF3D54217A6A4EDD5609AC36B30F76316D878FD0E91CA71E6&fbclid=IwAR0vr51vKVbulH1HprnKIG7xrz-rMNyhIuLSowPSK3xYacO_Rh_-6NJhWd4"><div class="content-img-text">
@@ -348,187 +348,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/html:css.png" alt="">
-                <a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>作品一：六角學院初體驗</h1>
-                    <p>前端工程學習過程中的第一份排版成品</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：HTML/CSS<br/>
-                    程式運用：VSCode <br>
-                    重點運用：Flex排版技巧、Position定位、Table製作、第三方Plugin善用等等。<br/>
-                    動畫設計：CSS/jQuery等語法運用。<br/>
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.01~2022.07.10
-                </div>
-                <div class="intro-text-4">
-                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/RWD-W.png" alt="">
-                <a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>作品二：六角西餐廳</h1>
-                    <p>前端工程學習過程中的第一份響應式設計作品</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：RWD<br/>
-                    程式運用：VSCode <br>
-                    重點運用：Responsive Web Design 響應式網頁設計。<br/>
-                    動畫設計：CSS/jQuery等語法運用。<br/>
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.18~2022.07.19
-                </div>
-                <div class="intro-text-4">
-                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/sass.png" alt="">
-                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>技術一： SASS/SCSS 彙整</h1>
-                    <p>將以往的 css 撰寫法轉換為簡潔與分類管理的方式編寫。</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：CSS/RWD<br/>
-                    程式運用：Prepros / Sublime <br/>
-                    重點運用：Sass/Scss/mixin/content/$<br/>
-                    額外新增：RWD 熱門斷點 mixin 函式庫。
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.23
-                </div>
-                <div class="intro-text-4">
-                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/four.jpeg" alt="">
-                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>技術二：滾動視差網頁設計</h1>
-                    <p>利用動畫效果的方式使得閱覽者在觀看網頁時，擁有視差體驗。</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：CSS/JavaScript/JQuery<br/>
-                    程式運用：VScode<br/>
-                    重點運用：背景固定/矛點滾動/指定位置顯示/進度條動畫/滾動視差效果<br/>
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.23
-                </div>
-                <div class="intro-text-4">
-                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/swing.png" alt="">
-                <a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>作品三：Swing 不確定度傳遞計算機</h1>
-                    <p>利用視窗程式解決普物實驗最為痛苦的數據分析過程</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：Java/JFrame事件設計<br/>
-                    程式運用：Netbeans <br>
-                    系統特色：大幅度縮短實驗後所需花費的數據分析時間。<br/>
-                    系統帳號：SCHJ、系統密碼：1314520
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.27
-                </div>
-                <div class="intro-text-4">
-                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/ocpjp.png" alt="">
-                <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>技術三：Oracle Certified Professional SE 11</h1>
-                    <p>Java OCPJP SE11 1z0-819 國際級程設專業認證個人資料庫</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：Java OCPJP<br/>
-                    程式運用：Eclipse / Netbeans <br>
-                    版本使用：Java JDK 11<br/>
-                    建立者：SC_Lemon
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.18~持續中。
-                </div>
-                <div class="intro-text-4">
-                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
-            <div class="href">
-                <img src="images/dom.png" alt="">
-                <a target="_blank" href="https://sc1314520.github.io/analyze.github.io/"><div class="content-img-text">
-                    <span class="content-img-text-1">前往頁面</span>
-                </div></a>
-            </div>
-            <div class="introduction">
-                <div class="intro-text">
-                    <h1>作品四：不確定度傳遞計算機網頁版</h1>
-                    <p>利用JavaScript與DOM概念所建立的簡易小工具。</p>
-                </div>
-                <div class="intro-text-2">
-                    基本技巧：JavaScript/DOM<br/>
-                    程式運用：VScode <br>
-                </div>
-                <div class="intro-text-3">
-                    製作時間：2022.07.29。
-                </div>
-                <div class="intro-text-4">
-                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/analyze.github.io/">點擊連結</a>
-                </div>
-            </div>
-        </div>
-        <div class="content animate__animated">
+        <div class="content show8 animate__animated" id="8" >
             <div class="href">
                 <img src="images/db.png" alt="">
                 <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07/tree/main/OCPJP/src/Basic/JDBC_2"><div class="content-img-text">
@@ -554,6 +374,190 @@
                 </div>
             </div>
         </div>
+        <div class="content show7 animate__animated" id="7" >
+            <div class="href">
+                <img src="images/dom.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/analyze.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品四：不確定度傳遞計算機網頁版</h1>
+                    <p>利用JavaScript與DOM概念所建立的簡易小工具。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：JavaScript/DOM<br/>
+                    程式運用：VScode <br>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.29。
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/analyze.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show6 animate__animated page-close" id="6">
+            <div class="href">
+                <img src="images/ocpjp.png" alt="">
+                <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術三：Oracle Certified Professional SE 11</h1>
+                    <p>Java OCPJP SE11 1z0-819 國際級程設專業認證個人資料庫</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java OCPJP<br/>
+                    程式運用：Eclipse / Netbeans <br>
+                    版本使用：Java JDK 11<br/>
+                    建立者：SC_Lemon
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.18~持續中。
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show5 animate__animated page-close" id="5">
+            <div class="href">
+                <img src="images/swing.png" alt="">
+                <a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品三：Swing 不確定度傳遞計算機</h1>
+                    <p>利用視窗程式解決普物實驗最為痛苦的數據分析過程</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java/JFrame事件設計<br/>
+                    程式運用：Netbeans <br>
+                    系統特色：大幅度縮短實驗後所需花費的數據分析時間。<br/>
+                    系統帳號：SCHJ、系統密碼：1314520
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.27
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/Netbeans-Swing">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show4 animate__animated page-close" id="4">
+            <div class="href">
+                <img src="images/four.jpeg" alt="">
+                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術二：滾動視差網頁設計</h1>
+                    <p>利用動畫效果的方式使得閱覽者在觀看網頁時，擁有視差體驗。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：CSS/JavaScript/JQuery<br/>
+                    程式運用：VScode<br/>
+                    重點運用：背景固定/矛點滾動/指定位置顯示/進度條動畫/滾動視差效果<br/>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.23
+                </div>
+                <div class="intro-text-4">
+                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/Parallax%20Scroller">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show3 animate__animated page-close" id="3">
+            <div class="href">
+                <img src="images/sass.png" alt="">
+                <a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>技術一： SASS/SCSS 彙整</h1>
+                    <p>將以往的 css 撰寫法轉換為簡潔與分類管理的方式編寫。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：CSS/RWD<br/>
+                    程式運用：Prepros / Sublime <br/>
+                    重點運用：Sass/Scss/mixin/content/$<br/>
+                    額外新增：RWD 熱門斷點 mixin 函式庫。
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.23
+                </div>
+                <div class="intro-text-4">
+                    資源傳送門：<a target="_blank" href="https://github.com/SC1314520/RWDrestaurant.github.io/tree/main/SASS">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show2 animate__animated page-close" id="2">
+            <div class="href">
+                <img src="images/RWD-W.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品二：六角西餐廳</h1>
+                    <p>前端工程學習過程中的第一份響應式設計作品</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：RWD<br/>
+                    程式運用：VSCode <br>
+                    重點運用：Responsive Web Design 響應式網頁設計。<br/>
+                    動畫設計：CSS/jQuery等語法運用。<br/>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.18~2022.07.19
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/RWDrestaurant.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="content show1 animate__animated page-close" id="1">
+            <div class="href">
+                <img src="images/html:css.png" alt="">
+                <a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品一：六角學院初體驗</h1>
+                    <p>前端工程學習過程中的第一份排版成品</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：HTML/CSS<br/>
+                    程式運用：VSCode <br>
+                    重點運用：Flex排版技巧、Position定位、Table製作、第三方Plugin善用等等。<br/>
+                    動畫設計：CSS/jQuery等語法運用。<br/>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.07.01~2022.07.10
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/">點擊連結</a>
+                </div>
+            </div>
+        </div>
+        <div class="page">
+            <button class="up" id="up" >上一頁</button>
+            <button class="down" id="down">下一頁</button>
+        </div>
+        <span class="page-c" id="page-c">(目前頁數為：1)</span>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
