--- a/plan.html
+++ b/plan.html
@@ -44,12 +44,12 @@
         </div>
     </div>
     <div class="home">
-        <img src="images/IMG_3413.jpg" alt="">
+        <img src="images/400693.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
-        <div class="home-text2 animate__animated">
+        <div class="home-text2 animate__animated" style="display: none;">
             <h1>Miaomi</h1>
             <p>Major in English Program, Dept. of Applied Foreign Languages in TCHCVS</p>
         </div>
