--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
 
         <div class="fans-open">
-            <div class="fans-hide" id="fans-hide">
+            <div class="fans-hide" id="fans-hide" style="display: none;">
                 <h1>身份驗證機制</h1>
                 <input id="salt" type="hidden" value="1314">
                 <input type="password" class="fans-pw" id="password" name="password" placeholder="請輸入驗證碼">
