--- a/index.html
+++ b/index.html
@@ -320,8 +320,28 @@
         </ul>
     </div>
     <div class="project">
+        <div class="search">
+            <div>
+                <select name="search-select" id="search-select" class="search-select">
+                        <option value="all">顯示全部</option>
+                        <option value="1">1. 六角學院初體驗</option>
+                        <option value="2">2. RWD 六角西餐廳</option>
+                        <option value="3">3. SASS/SCSS 彙整</option>
+                        <option value="4">4. 滾動視差網頁設計</option>
+                        <option value="5">5. Swing不確定度計算機</option>
+                        <option value="6">6. OCPJP SE 11 訓練過程</option>
+                        <option value="7">7. 不確定度計算機網頁版</option>
+                        <option value="8">8. JDBC的應用與串連</option>
+                        <option value="9">9. OCPJP SE 11 Developer</option>
+                </select>
+            </div>
+            <div class="search-ico-1">
+                <i class="search-icon-2 fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
         <h1 class="animate__animated">Recent Project</h1>
         <p>See more about these on my <a href="https://github.com/SC1314520">GitHub</a></p>
+        <div>
         <div class="content show9 animate__animated" id="9" >
             <div class="href">
                 <img src="images/cert.png" alt="">
@@ -553,6 +573,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <div class="page">
             <button class="up" id="up" >上一頁</button>
             <button class="down" id="down">下一頁</button>
@@ -607,5 +628,6 @@
             <span class="contact-title">電子信箱： </span> blc0000421@gmail.com
         </div>
     </div>
+   <script src="https://kit.fontawesome.com/026fbb8b51.js" crossorigin="anonymous"></script>
 </body>
 </html>
