--- a/basic.html
+++ b/basic.html
@@ -39,10 +39,6 @@
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
     </div>
-    <div class="ph">
-        <h1>My philosophy</h1>
-        <p>Time and efficiency are what I yearn for and have the courage to try and challenge.</p>
-    </div>
     <div class="main">
         <div class="main-title">Degree of Education</div>
         <div class="main-content-all">
@@ -62,21 +58,41 @@
             </div>
         </div>
     </div>
+    <div class="ph">
+        <h1>My philosophy</h1>
+        <p>Time and efficiency are what I yearn for and have the courage to try and challenge.</p>
+    </div>
+   
     <div class="achievement">
         <h1>Special Achievement</h1>
         <div class="ach-content-all">
             <div class="ach-content">
-                <img src="images/special-first.webp" alt="">
+                <div class="ach-img">
+                    <a target="_blank" href="https://flipedu.parenting.com.tw/article/006417"><img src="images/special-first.webp" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
+                </div>
                 <h1>天下雜誌翻轉教育受刊</h1>
-                <p>高中時期所創建之學術分享帳，因長期的分享與協助學弟妹解決物理學科上的種種問題而受到親睞。在一次的台大電機系葉丙成教授演講過程中，交大化學系的教授在媒體面前讚揚我的帳號與付出，因而受到天下雜誌翻轉教育專區的推薦。</p>
+                <p>高中時期所創建之學術分享帳，因長期的分享與協助學弟妹解決物理學科上的種種問題而受到親睞。在一次的台大電機系葉丙成教授演講過程中，交大化學系的教授在媒體面前讚揚我的帳號與付出，因而受到天下雜誌教育專欄的推薦。</p>
             </div>
             <div class="ach-content">
-                <img src="images/special-2.jpeg" alt="">
+                <div class="ach-img">
+                    <a target="_blank" href="https://science-event.nctu.edu.tw/"><img src="images/special-2.jpeg" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
+                </div>
                 <h1>APX全國數理能力競賽物理科銀牌</h1>
                 <p>前兩次參與了此類數理能力競賽並無獲得良好的成績，直到最終的第四屆與第五屆才依序獲得了銅牌與銀牌，說明了雖然天賦不如人，但只要肯努力終能獲得回報。不要因為一次的失敗而氣餒，才是參與這項競賽所獲得的最佳心得。</p>
             </div>
             <div class="ach-content">
-                <img src="images/special-3.png" alt="">
+                <div class="ach-img">
+                    <a target="_blank" href="https://science-event.nctu.edu.tw/apx/6th/highschool/course"><img src="images/special-3.png" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
+                </div>
                 <h1>國立交通大學理學院院長獎佳作</h1>
                 <p>個人以自我推薦的方式獲選基礎科學教育研習的機會，其中製作了十四份的數理科研習研究，最終以 13/14 A級的成績獲得了理學院院長獎佳作的表揚。在過程中也獲得了四次的優秀專題榮譽，讓我在此次的研習競賽中受益良多。</p>
             </div>
@@ -95,7 +111,7 @@
                 <div class="my-intro-text">
                     <p>國中時期的我，課業上的問題時常是在社群討論區解決的，使我能夠在學科上奠定良好的基礎。他們的教學熱忱，促成了我在國三會考結束後，主動的回到社群中去幫助其他的學弟妹；⾄今已經三年，除了在萬⼈物理解題社群中獲得了全體答題率第七名的榮耀外，也得到了不少學弟妹的稱讚與肯定。林林總總的支持與回饋造就了我對於教學他⼈充滿著強烈的熱忱，希望能夠藉由教學與幫助他⼈的⽅式，將曾經受恩無量的恩情傳承下去，去影響、去擴展到更多的學⽣。</p>
                      </div>
-                <div class="my-intro-img"><img src="images/IMG_2701.JPG" alt=""></div>
+                <div class="my-intro-img"><img src="images/400694.jpg" alt=""></div>
             </div>
             <div class="my-intro-content">
                 <div class="my-intro-img"><img src="images/IMG_2702.JPG" alt=""></div>
