--- a/basic.html
+++ b/basic.html
@@ -8,6 +8,7 @@
     <!-- js -->
     <script src="js/jquery2.2.3.min.js"></script>
     <script src="js/index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
@@ -117,7 +118,7 @@
             </div>
         </div>
     </div>
-    <div class="chart-block-all">
+    <div class="chart-block-all animate__animated">
         <h1>Self-Judgment</h1>
         <div class="chart-block">
             <div class="chart">
@@ -142,7 +143,7 @@
             </div>
         </div>
     </div>
-    <div class="my-intro">
+    <div class="my-intro animate__animated">
         <h1>Self-Introduction</h1>
         <div class="my-intro-all">
             <div class="my-intro-content">
@@ -151,13 +152,13 @@
                    <p> ⽗母給予的教育以態度與自律為重，求學階段⼀概給予孩⼦追求自我目標的權利。從國小⾄今，學習到的七⼤能⼒：⾏動、計畫、思考、變通、自省、謹慎以及記憶⼒，才是⽗母對於孩⼦的期待，常以「態度決定⾼度」為培養理念，讓孩⼦在理想且安全的教育環境下成長。在⽗母的細⼼栽培下，身為孩⼦的我，為了不辜負⽗母的用⼼，努⼒著不斷追求自己的理想與更⾼且更好的境界。</p>
                     </div>
                 </div>
-            <div class="my-intro-content">
+            <div class="my-intro-content c2">
                 <div class="my-intro-text">
                     <p>國中時期的我，課業上的問題時常是在社群討論區解決的，使我能夠在學科上奠定良好的基礎。他們的教學熱忱，促成了我在國三會考結束後，主動的回到社群中去幫助其他的學弟妹；⾄今已經三年，除了在萬⼈物理解題社群中獲得了全體答題率第七名的榮耀外，也得到了不少學弟妹的稱讚與肯定。林林總總的支持與回饋造就了我對於教學他⼈充滿著強烈的熱忱，希望能夠藉由教學與幫助他⼈的⽅式，將曾經受恩無量的恩情傳承下去，去影響、去擴展到更多的學⽣。</p>
                      </div>
                 <div class="my-intro-img"><img src="images/L1.jpg" alt=""></div>
             </div>
-            <div class="my-intro-content">
+            <div class="my-intro-content c3">
                 <div class="my-intro-img"><img src="images/IMG_2702.JPG" alt=""></div>
                 <div class="my-intro-text">
                     <p> 我是⼀個正向樂觀的⼈。時常以正面思考的⽅式去修正、去克服，並且在他⼈有困難時，以傾聽的⽅式陪伴他⼈(同學、家⼈等等)⼀同度過難關，引領他⼈往更好的境界發展。使他⼈不會因阻礙⽽討厭物理，⽽是以解題後的成就感培養對於物理學科的熱忱，並且把此份無私的幫助傳承下去。</p>
@@ -166,7 +167,7 @@
             </div>
         </div>
     </div>
-    <div class="achievement">
+    <div class="achievement animate__animated">
         <img src="images/b-7.jpeg" alt="">
         <div class="achievement-title"><h1>Special Achievement</h1></div>
         <div class="achievement-title2"><h1>Special Achievement</h1></div>
