--- a/basic.html
+++ b/basic.html
@@ -144,23 +144,28 @@
         </div>
     </div>
     <div class="my-intro animate__animated">
+        <div class="size">
+            <div class="size-content r1">大</div>
+            <div class="size-content r2 change">中</div>
+            <div class="size-content r3">小</div>
+        </div>
         <h1>Self-Introduction</h1>
         <div class="my-intro-all">
             <div class="my-intro-content">
                 <div class="my-intro-img"><img src="images/IMG_2700.JPG" alt=""></div>
-                <div class="my-intro-text">
+                <div class="my-intro-text t1">
                    <p> ⽗母給予的教育以態度與自律為重，求學階段⼀概給予孩⼦追求自我目標的權利。從國小⾄今，學習到的七⼤能⼒：⾏動、計畫、思考、變通、自省、謹慎以及記憶⼒，才是⽗母對於孩⼦的期待，常以「態度決定⾼度」為培養理念，讓孩⼦在理想且安全的教育環境下成長。在⽗母的細⼼栽培下，身為孩⼦的我，為了不辜負⽗母的用⼼，努⼒著不斷追求自己的理想與更⾼且更好的境界。</p>
                     </div>
                 </div>
             <div class="my-intro-content c2">
-                <div class="my-intro-text">
+                <div class="my-intro-text t2">
                     <p>國中時期的我，課業上的問題時常是在社群討論區解決的，使我能夠在學科上奠定良好的基礎。他們的教學熱忱，促成了我在國三會考結束後，主動的回到社群中去幫助其他的學弟妹；⾄今已經三年，除了在萬⼈物理解題社群中獲得了全體答題率第七名的榮耀外，也得到了不少學弟妹的稱讚與肯定。林林總總的支持與回饋造就了我對於教學他⼈充滿著強烈的熱忱，希望能夠藉由教學與幫助他⼈的⽅式，將曾經受恩無量的恩情傳承下去，去影響、去擴展到更多的學⽣。</p>
                      </div>
                 <div class="my-intro-img"><img src="images/L1.jpg" alt=""></div>
             </div>
-            <div class="my-intro-content c3">
+            <div class="my-intro-content c3 ">
                 <div class="my-intro-img"><img src="images/IMG_2702.JPG" alt=""></div>
-                <div class="my-intro-text">
+                <div class="my-intro-text t3">
                     <p> 我是⼀個正向樂觀的⼈。時常以正面思考的⽅式去修正、去克服，並且在他⼈有困難時，以傾聽的⽅式陪伴他⼈(同學、家⼈等等)⼀同度過難關，引領他⼈往更好的境界發展。使他⼈不會因阻礙⽽討厭物理，⽽是以解題後的成就感培養對於物理學科的熱忱，並且把此份無私的幫助傳承下去。</p>
                      <p>我也是個喜愛與⼈共處互動的社交愛好者，在學科⽅面上盡⼒追求後，不妨會去參加或承辦不同的活動，去擴展自⼰的社交圈。也因為如此，我創辦了⼀支學術性的讀書紀錄帳，在閒暇時間，去幫助他⼈解決物理科問題，去認識全國各地不同的學⽣、老師等等。</p>
                 </div>
