--- a/basic.html
+++ b/basic.html
@@ -47,7 +47,7 @@
           pieSliceTextStyle: {
             color: 'none',
           },
-          colors:['#EA0000','#F0F0F0'],
+          colors:['#CE0000','#F0F0F0'],
           legend: 'none'
         };
 
